--- a/config/detekt.yml
+++ b/config/detekt.yml
@@ -5,21 +5,16 @@ build:
 config:
   validation: true
 
-# Дубли со стилем/форматированием отключаем — это зона ответственности ktlint
+# Стиль/формат — зона ktlint; здесь только то, что не конфликтует
 style:
   active: true
+
   WildcardImport:
     active: false
+
   MaxLineLength:
     active: false
-  ReturnCount:
-    active: true
-    max: 4
-    excludeGuardClauses: true
-    excludeLabeled: true
-    excludeReturnFromFinally: true
-    excludedFunctions: ['equals']
-    excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
+
   MagicNumber:
     active: true
     excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
@@ -31,12 +26,87 @@ style:
     ignoreCompanionObjectPropertyDeclaration: false
     ignoreNamedArgument: true
     ignoreRanges: true
-    ignoreNumbers: [
-      -1,0,1,2,3,4,5,8,10,12,15,20,25,30,33,40,45,50,60,80,90,100,120,150,160,180,200,250,300,330,360,
-      400,500,600,700,800,900,1000,1200,1500,1800,2000,3000,5000,10000
-    ]
+    # В UI не шумим: игнорируем числа в @Composable/@Preview
+    ignoreAnnotated:
+      - 'Composable'
+      - 'androidx.compose.runtime.Composable'
+      - 'Preview'
+      - 'androidx.compose.ui.tooling.preview.Preview'
+    ignoreNumbers:
+      - '0xFFFF'
+      - '0.0'
+      - '0.3'
+      - '0.3f'
+      - '0.4'
+      - '0.4f'
+      - '16'
+      - '30.0'
+      - '60.0'
+      - '75.0'
+      - '-1'
+      - '0'
+      - '1'
+      - '2'
+      - '3'
+      - '4'
+      - '5'
+      - '8'
+      - '10'
+      - '12'
+      - '15'
+      - '20'
+      - '25'
+      - '30'
+      - '33'
+      - '40'
+      - '45'
+      - '50'
+      - '60'
+      - '80'
+      - '90'
+      - '100'
+      - '120'
+      - '150'
+      - '160'
+      - '180'
+      - '200'
+      - '250'
+      - '300'
+      - '330'
+      - '360'
+      - '400'
+      - '500'
+      - '600'
+      - '700'
+      - '800'
+      - '900'
+      - '1000'
+      - '1200'
+      - '1500'
+      - '1800'
+      - '2000'
+      - '3000'
+      - '5000'
+      - '10000'
 
-# Основные полезные наборы правил
+  # Превью/композы не считаем «неиспользованными»
+  UnusedPrivateMember:
+    active: true
+    ignoreAnnotated:
+      - 'Composable'
+      - 'androidx.compose.runtime.Composable'
+      - 'Preview'
+      - 'androidx.compose.ui.tooling.preview.Preview'
+      - 'PreviewParameter'
+
+  # Разумные границы на число return'ов
+  ReturnCount:
+    active: true
+    max: 6
+    excludeGuardClauses: true
+    excludeReturnFromLambda: true
+
+# Полезные наборы правил
 potential-bugs:
   active: true
   UnsafeCallOnNullableType:
@@ -49,11 +119,16 @@ performance:
   SpreadOperator:
     active: true
 
-exceptions:
+# Пустые блоки
+empty-blocks:
   active: true
   EmptyCatchBlock:
     active: true
     allowedExceptionNameRegex: '_|(ignore|expected).*'
+
+# Исключения
+exceptions:
+  active: true
   TooGenericExceptionCaught:
     active: true
     exceptionNames: ['Throwable', 'Exception', 'RuntimeException']
@@ -62,52 +137,65 @@ exceptions:
   ThrowingExceptionsWithoutMessageOrCause:
     active: true
 
+# Имена/нейминг
 naming:
   active: true
   FunctionNaming:
     active: true
+    # PascalCase у @Composable/@Preview
+    ignoreAnnotated:
+      - 'Composable'
+      - 'androidx.compose.runtime.Composable'
+      - 'Preview'
+      - 'androidx.compose.ui.tooling.preview.Preview'
+      - 'PreviewParameter'
   FunctionMaxLength:
     active: false
   TopLevelPropertyNaming:
     active: true
 
+# Сложность
 complexity:
   active: true
-  LongMethod:
-    active: true
-    threshold: 120
-    ignoreAnnotated: ['Composable', 'Preview']
-    ignoreSimpleWhenEntries: true
-    ignoreLabeled: true
-    excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
+
   LongParameterList:
     active: true
-    threshold: 8
+    # Поднимем потолок для UI и проигнорим @Composable/@Preview
+    functionThreshold: 10
+    constructorThreshold: 10
     ignoreDefaultParameters: true
-    ignoreDataClasses: true
-    ignoreAnnotated: ['Composable', 'Preview']
-    excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
-  ComplexMethod:
+    ignoreAnnotated:
+      - 'Composable'
+      - 'androidx.compose.runtime.Composable'
+      - 'Preview'
+      - 'androidx.compose.ui.tooling.preview.Preview'
+
+  LongMethod:
     active: true
-    threshold: 15
+    threshold: 180
     ignoreAnnotated: ['Composable', 'Preview']
     excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
-  CognitiveComplexMethod:
-    active: true
-    threshold: 15
-    ignoreAnnotated: ['Composable', 'Preview']
-    excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
-  NestedBlockDepth:
-    active: true
-    threshold: 4
-    ignoreAnnotated: ['Composable', 'Preview']
-    excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
+
   TooManyFunctions:
     active: true
-    thresholdInClasses: 30
-    thresholdInObjects: 30
-    thresholdInInterfaces: 30
-    ignoreOverridden: true
-    excludes: ['**/test/**', '**/androidTest/**', '**/generated/**']
+    thresholdInFiles: 20
+    thresholdInClasses: 20
+    thresholdInInterfaces: 20
+    thresholdInObjects: 20
+
+  CyclomaticComplexMethod:
+    active: true
+    threshold: 20
+    ignoreAnnotated: ['Composable', 'Preview']
+
+  CognitiveComplexMethod:
+    active: true
+    threshold: 35
+    ignoreAnnotated: ['Composable', 'Preview']
+
+  NestedBlockDepth:
+    active: true
+    threshold: 7
+
 processors:
   active: true
