--- a/gradle.properties
+++ b/gradle.properties
@@ -18,10 +18,13 @@ kotlin.compiler.execution.strategy=in-process
 kotlin.colors.enabled=true
 android.builder.sdkDownload=true
 
-# Build Scan ToS (если используешь --scan)
+# Build Scan ToS scan)
 gradle.termsOfService.agree=yes
 gradle.termsOfServiceUrl=https://gradle.com/terms-of-service
 
-# (Опц.) network robustness
+# network robustness
 systemProp.org.gradle.internal.http.socketTimeout=120000
 systemProp.org.gradle.internal.http.connectionTimeout=60000
+
+systemProp.java.net.preferIPv4Stack=true
+systemProp.java.net.preferIPv4Addresses=true
