--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
 agp = "8.7.2"
 kotlin = "2.0.20"
-detekt = "1.23.6"
+detekt = "1.23.8"
 ktlintGradle = "12.1.0"
+ktlintEngine = "1.7.1"
 compileSdk = "35"
 targetSdk = "35"
 minSdkWear = "30"
