--- a/core/location/src/main/AndroidManifest.xml
+++ b/core/location/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- Если реально берёшь локацию в фоне — добавь отдельно (Wear обычно не надо):
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
+    </manifest>
